--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,6 +9,9 @@ spring.datasource.driver-class-name=com.mysql.jdbc.Driver
 # Hibernate Properties
 spring.jpa.show-sql=true
 spring.jpa.hibernate.ddl-auto=update
+# Security Properties
+spring.security.user.name=test
+spring.security.user.password=test
 
 
 # # Thymeleaf Properties
